完成水箭龜招式表本地化，包括爆發攻擊、寶可夢招式、標準招式和同步爆發時招式

--- a/噴火龍.html
+++ b/噴火龍.html
@@ -99,7 +99,7 @@ a:hover {
         </div>
     </div>
     
-    <h2>爆發攻擊</h2>
+    <h2>寶可夢招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -110,88 +110,132 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Searing Blaze</td>
+        <td>飛行姿勢</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>按前 + A 或 R</td>
+        <td>可用方向鍵移動。按 R 取消</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>空氣斬</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>Can pierce counter attacks and be activated in mid air</td>
-        <td>241</td>
+        <td>按 Y</td>
+        <td>無特殊效果</td>
+        <td>68</td>
     </tr>
-</table><h2>寶可夢招式</h2>
-<table>
     <tr>
-        <th>招式名稱</th>
-        <th>招式類型</th>
-        <th>可用階段</th>
-        <th>按鈕組合</th>
-        <th>備註</th>
-        <th>傷害值</th>
+        <td>龍爪</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 X</td>
+        <td>無特殊效果</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>閃焰衝鋒：直衝</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 A</td>
+        <td>會造成自身傷害</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>閃焰衝鋒：加速</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按前 + A</td>
+        <td>會造成自身傷害</td>
+        <td>162</td>
+    </tr>
+    <tr>
+        <td>閃焰衝鋒：上升</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按上 + A</td>
+        <td>會造成自身傷害</td>
+        <td>162</td>
     </tr>
     <tr>
         <td>噴射火焰</td>
-        <td>一般</td>
+        <td>遠距離</td>
         <td>全階段</td>
-        <td>A</td>
-        <td>無特殊效果</td>
-        <td>69</td>
+        <td>按 B</td>
+        <td>可長按蓄力</td>
+        <td>40</td>
     </tr>
     <tr>
-        <td>Fire Punch</td>
-        <td>反擊</td>
+        <td>噴射火焰：蓄力</td>
+        <td>遠距離</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>Can switch to Flying Stance with R</td>
+        <td>長按 B</td>
+        <td>完全蓄力後威力提升</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>火焰旋渦</td>
+        <td>遠距離</td>
+        <td>全階段</td>
+        <td>按前 + B</td>
+        <td>可長按蓄力</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>火焰旋渦：蓄力</td>
+        <td>遠距離</td>
+        <td>全階段</td>
+        <td>長按前 + B</td>
+        <td>完全蓄力後威力提升</td>
         <td>100</td>
     </tr>
     <tr>
-        <td>Fire Punch ~ Flying Stance</td>
-        <td>反擊</td>
+        <td>噴射火焰：空中</td>
+        <td>遠距離</td>
         <td>全階段</td>
-        <td>Forward + Hold A</td>
-        <td>無特殊效果</td>
-        <td>100</td>
+        <td>空中按 B</td>
+        <td>可長按蓄力</td>
+        <td>40</td>
     </tr>
     <tr>
-        <td>Inferno</td>
-        <td>一般</td>
+        <td>噴射火焰：空中蓄力</td>
+        <td>遠距離</td>
         <td>全階段</td>
-        <td>Backwards + A</td>
-        <td>Can switch to Flying Stance with R</td>
-        <td>96</td>
+        <td>空中長按 B</td>
+        <td>完全蓄力後威力提升</td>
+        <td>80</td>
+    </tr>
+</table>
+
+<h2>爆發攻擊</h2>
+<table>
+    <tr>
+        <th>招式名稱</th>
+        <th>招式類型</th>
+        <th>可用階段</th>
+        <th>按鈕組合</th>
+        <th>備註</th>
+        <th>傷害值</th>
     </tr>
     <tr>
-        <td>Flare Blitz: Fall</td>
-        <td>一般</td>
+        <td>爆裂火焰</td>
+        <td>爆發</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>傷害值s yourself</td>
-        <td>161</td>
+        <td>按 L + R</td>
+        <td>同步爆發必殺技</td>
+        <td>270</td>
     </tr>
     <tr>
-        <td>Flare Blitz: Direct</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Midair, Forwards + A</td>
-        <td>傷害值s yourself</td>
-        <td>130</td>
+        <td>爆裂火焰：空中</td>
+        <td>爆發</td>
+        <td>全階段</td>
+        <td>空中按 L + R</td>
+        <td>同步爆發必殺技</td>
+        <td>270</td>
     </tr>
-    <tr>
-        <td>Flare Blitz: Direct</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair, Up + A</td>
-        <td>傷害值s yourself</td>
-        <td>130</td>
-    </tr>
-    <tr>
-        <td>地球投擲</td>
-        <td>抓取</td>
-        <td>對戰階段</td>
-        <td>Up + A</td>
-        <td>抓取s opponents on ground and in 空中</td>
-        <td>160</td>
-    </tr>
-</table><h2>標準招式</h2>
+</table>
+
+<h2>標準招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -205,7 +249,7 @@ a:hover {
         <td>抓取攻擊</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Y + B</td>
+        <td>按 Y + B</td>
         <td>無特殊效果</td>
         <td>100</td>
     </tr>
@@ -213,39 +257,39 @@ a:hover {
         <td>反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>可用方向鍵+R取消</td>
+        <td>按 X + A</td>
+        <td>可用方向鍵 + R 取消</td>
         <td>73</td>
     </tr>
     <tr>
         <td>蓄力反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>Can pierce counter attacks.</td>
+        <td>按 X + A</td>
+        <td>可貫穿反擊攻擊</td>
         <td>100</td>
     </tr>
     <tr>
-        <td>Glide</td>
+        <td>滑翔</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Midair + R</td>
-        <td>Causes you to jump in the air. 長按 R to increase fall speed</td>
+        <td>空中按 R</td>
+        <td>使角色跳到空中。長按 R 可加快下降速度</td>
         <td>0</td>
     </tr>
     <tr>
         <td>遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y</td>
+        <td>按 Y</td>
         <td>無特殊效果</td>
         <td>59</td>
     </tr>
     <tr>
-        <td>Ranged Attack: Charge</td>
+        <td>遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Hold Y</td>
+        <td>長按 Y</td>
         <td>無特殊效果</td>
         <td>64</td>
     </tr>
@@ -253,7 +297,7 @@ a:hover {
         <td>連接遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y, Y</td>
+        <td>按 Y，Y</td>
         <td>無特殊效果</td>
         <td>79</td>
     </tr>
@@ -261,7 +305,7 @@ a:hover {
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
+        <td>側身按 Y，Y</td>
         <td>無特殊效果</td>
         <td>70</td>
     </tr>
@@ -269,7 +313,7 @@ a:hover {
         <td>連接側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y, Y</td>
+        <td>側身按 Y，Y，Y</td>
         <td>無特殊效果</td>
         <td>118</td>
     </tr>
@@ -277,7 +321,7 @@ a:hover {
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
+        <td>按前 + Y</td>
         <td>切換階段</td>
         <td>80</td>
     </tr>
@@ -285,15 +329,15 @@ a:hover {
         <td>後方遠距離攻擊</td>
         <td>反擊</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
-        <td>Works against airborne opponents</td>
+        <td>按後 + Y</td>
+        <td>對空中對手有效</td>
         <td>91</td>
     </tr>
     <tr>
-        <td>Backward Ranged Attack: Charge</td>
+        <td>後方遠距離攻擊：蓄力</td>
         <td>反擊</td>
         <td>場地階段</td>
-        <td>Backwards + Hold Y</td>
+        <td>按後 + 長按 Y</td>
         <td>無特殊效果</td>
         <td>100</td>
     </tr>
@@ -301,31 +345,31 @@ a:hover {
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
-        <td>Change trajectory with the D-Pad</td>
+        <td>空中按 Y</td>
+        <td>可用方向鍵改變軌跡</td>
         <td>49</td>
     </tr>
     <tr>
-        <td>Jumping Ranged Attack: Charge</td>
+        <td>跳躍遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Hold Y</td>
-        <td>Change trajectory with the D-Pad</td>
+        <td>空中長按 Y</td>
+        <td>可用方向鍵改變軌跡</td>
         <td>70</td>
     </tr>
     <tr>
         <td>追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X</td>
-        <td>可用R取消 or B</td>
+        <td>按 X，X</td>
+        <td>可用 R 或 B 取消</td>
         <td>126</td>
     </tr>
     <tr>
-        <td>Homing Attack, Flying Stance</td>
+        <td>追蹤攻擊～飛行姿勢</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Hold X</td>
+        <td>長按 X</td>
         <td>無特殊效果</td>
         <td>56</td>
     </tr>
@@ -333,155 +377,29 @@ a:hover {
         <td>蓄力追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, Hold X</td>
-        <td>貫穿反擊 and breaks the guard</td>
+        <td>按 X，長按 X</td>
+        <td>貫穿反擊並破防</td>
         <td>232</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X</td>
-        <td>後s + X to attack immediately. 全階段ows for gliding with R. 切換階段</td>
+        <td>空中按 X</td>
+        <td>按後 + X 可立即攻擊。可用 R 滑翔。切換階段</td>
         <td>90</td>
     </tr>
     <tr>
-        <td>Jumping Attack: Charge</td>
+        <td>跳躍攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X Hold</td>
-        <td>貫穿反擊. 全階段ows for gliding with R</td>
+        <td>空中長按 X</td>
+        <td>貫穿反擊。可用 R 滑翔</td>
         <td>120</td>
     </tr>
-    <tr>
-        <td>寶可連擊1</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>154</td>
-    </tr>
-    <tr>
-        <td>弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y</td>
-        <td>Can be cancelled by jumping or using 寶可夢招式</td>
-        <td>84</td>
-    </tr>
-    <tr>
-        <td>前方弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + Y</td>
-        <td>擊倒對手</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>高姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Y</td>
-        <td>Transition into midair Attacks</td>
-        <td>18</td>
-    </tr>
-    <tr>
-        <td>Low Weak Attack</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>無特殊效果</td>
-        <td>40</td>
-    </tr>
-    <tr>
-        <td>寶可連擊2</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y, Y</td>
-        <td>無特殊效果</td>
-        <td>140</td>
-    </tr>
-    <tr>
-        <td>空中弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>Can be cancelled by using a Pokémon Move</td>
-        <td>36</td>
-    </tr>
-    <tr>
-        <td>Midair Forward Weak Attack</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Forward + Y, Y</td>
-        <td>無特殊效果</td>
-        <td>97</td>
-    </tr>
-    <tr>
-        <td>強力攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X</td>
-        <td>無特殊效果</td>
-        <td>130</td>
-    </tr>
-    <tr>
-        <td>前方強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + X, X</td>
-        <td>無特殊效果</td>
-        <td>164</td>
-    </tr>
-    <tr>
-        <td>Forward Strong Attack ~ Flying Stance</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + Hold X</td>
-        <td>無特殊效果</td>
-        <td>60</td>
-    </tr>
-    <tr>
-        <td>高姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>Effective against 抓取 Attacks</td>
-        <td>120</td>
-    </tr>
-    <tr>
-        <td>寶可連擊3</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + X, X</td>
-        <td>無特殊效果</td>
-        <td>111</td>
-    </tr>
-    <tr>
-        <td>Low Strong Attack</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + X</td>
-        <td>Can be cancelled by jumping or using 寶可夢招式</td>
-        <td>60</td>
-    </tr>
-    <tr>
-        <td>空中強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair X</td>
-        <td>後s + X to attack immediately. 全階段ows for gliding with R.</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>Midair Strong Attack: Charge</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Hold X</td>
-        <td>Pierces 反擊 Attacks, transition to glide with R</td>
-        <td>120</td>
-    </tr>
-</table><h2>僅限同步爆發時</h2>
+</table>
+
+<h2>僅限同步爆發時</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -492,52 +410,132 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Flying Stance</td>
-        <td>無傷害</td>
-        <td>全階段</td>
-        <td>Forward + A or R</td>
-        <td>Can move with the D-Pad. Cancelled with R</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>Air Slash</td>
-        <td>一般</td>
-        <td>全階段</td>
-        <td>Y</td>
-        <td>無特殊效果</td>
-        <td>68</td>
-    </tr>
-    <tr>
-        <td>龍爪</td>
-        <td>一般</td>
-        <td>全階段</td>
-        <td>X</td>
-        <td>無特殊效果</td>
-        <td>120</td>
-    </tr>
-    <tr>
-        <td>Flare Blitz: Direct</td>
-        <td>一般</td>
-        <td>全階段</td>
-        <td>A</td>
-        <td>傷害值s yourself</td>
-        <td>120</td>
-    </tr>
-    <tr>
-        <td>Flare Blitz: Boost</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Forward + A</td>
-        <td>傷害值s yourself</td>
-        <td>162</td>
-    </tr>
-    <tr>
-        <td>Flare Blitz: Boost</td>
+        <td>寶可連擊1</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + A</td>
-        <td>傷害值s yourself</td>
-        <td>162</td>
+        <td>按 Y，Y，Y</td>
+        <td>無特殊效果</td>
+        <td>154</td>
+    </tr>
+    <tr>
+        <td>弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按 Y，Y</td>
+        <td>可用跳躍或寶可夢招式取消</td>
+        <td>84</td>
+    </tr>
+    <tr>
+        <td>前方弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按前 + Y</td>
+        <td>擊倒對手</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>高姿勢弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按上 + Y</td>
+        <td>可轉換為空中攻擊</td>
+        <td>18</td>
+    </tr>
+    <tr>
+        <td>低姿勢弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按下 + Y</td>
+        <td>無特殊效果</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>寶可連擊2</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中按 Y，Y</td>
+        <td>無特殊效果</td>
+        <td>140</td>
+    </tr>
+    <tr>
+        <td>空中弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中按 Y</td>
+        <td>可用寶可夢招式取消</td>
+        <td>36</td>
+    </tr>
+    <tr>
+        <td>空中前方弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中按前 + Y，Y</td>
+        <td>無特殊效果</td>
+        <td>97</td>
+    </tr>
+    <tr>
+        <td>強力攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按 X</td>
+        <td>無特殊效果</td>
+        <td>130</td>
+    </tr>
+    <tr>
+        <td>前方強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按前 + X，X</td>
+        <td>無特殊效果</td>
+        <td>164</td>
+    </tr>
+    <tr>
+        <td>前方強攻擊～飛行姿勢</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按前 + 長按 X</td>
+        <td>無特殊效果</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>高姿勢強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按上 + X</td>
+        <td>對抓取攻擊有效</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>寶可連擊3</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按下 + X，X</td>
+        <td>無特殊效果</td>
+        <td>111</td>
+    </tr>
+    <tr>
+        <td>低姿勢強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按下 + X</td>
+        <td>可用跳躍或寶可夢招式取消</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>空中強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中按 X</td>
+        <td>按後 + X 可立即攻擊。可用 R 滑翔</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>空中強攻擊：蓄力</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中長按 X</td>
+        <td>貫穿反擊攻擊，可用 R 切換至滑翔</td>
+        <td>120</td>
     </tr>
 </table>
     
