--- a/水箭龜.html
+++ b/水箭龜.html
@@ -110,14 +110,16 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Destructive Cannon</td>
-        <td>一般</td>
+        <td>破壞加農炮</td>
+        <td>爆發</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>反擊 attack pierce</td>
+        <td>同步爆發時按 L + R</td>
+        <td>可貫穿反擊攻擊</td>
         <td>241</td>
     </tr>
-</table><h2>寶可夢招式</h2>
+</table>
+
+<h2>寶可夢招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -128,134 +130,120 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Water Gun</td>
+        <td>水槍</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A</td>
-        <td>Transition into Shell Fortress Stance with R or D-Pad + R. Change trajectory with D-Pad left or right</td>
+        <td>按 A</td>
+        <td>按 R 或方向鍵 + R 可轉換為龜殼要塞姿勢。可用左右方向鍵改變軌跡</td>
         <td>40</td>
     </tr>
     <tr>
-        <td>Water Gun ~ Aura Sphere</td>
+        <td>水槍～波導彈</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, A</td>
-        <td>Change trajectory by pressing D-Pad left or right. Shifts phases</td>
+        <td>按 A，A</td>
+        <td>可用左右方向鍵改變軌跡。切換階段</td>
         <td>85</td>
     </tr>
     <tr>
-        <td>Water Gun ~ Dark Pulse</td>
+        <td>水槍～暗黑波動</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, Y</td>
-        <td>Change trajectory by pressing D-Pad Left or Right. Pierces counter attack</td>
+        <td>按 A，Y</td>
+        <td>可用左右方向鍵改變軌跡。可貫穿反擊攻擊</td>
         <td>67</td>
     </tr>
     <tr>
-        <td>Water Gun ~ Dragon Pulse</td>
+        <td>水槍～龍之波動</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, X</td>
+        <td>按 A，X</td>
         <td>無特殊效果</td>
         <td>140</td>
     </tr>
     <tr>
-        <td>Water Gun ~ Aura Sphere ~ Synergy Burst Follow-up</td>
+        <td>水槍～波導彈～同步追擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, A, A (During Synergy Burst)</td>
-        <td>Change trajectory by pressing D-Pad Left or Right.</td>
+        <td>同步爆發時按 A，A，A</td>
+        <td>可用左右方向鍵改變軌跡</td>
         <td>184</td>
     </tr>
     <tr>
-        <td>Water Gun ~ Dark Pulse ~ Synergy Burst Follow Up</td>
+        <td>水槍～暗黑波動～同步追擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, Y, A (During Synergy Burst)</td>
-        <td>Change trajectory by pressing D-Pad Left or Right.</td>
+        <td>同步爆發時按 A，Y，A</td>
+        <td>可用左右方向鍵改變軌跡</td>
         <td>160</td>
     </tr>
     <tr>
-        <td>Water Gun ~ Dragon Pulse ~ Synergy Burst Follow-Up</td>
+        <td>水槍～龍之波動～同步追擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, X, A (During Synergy Burst)</td>
-        <td>Change trajectory by pressing D-Pad Left or Right.</td>
+        <td>同步爆發時按 A，X，A</td>
+        <td>可用左右方向鍵改變軌跡</td>
         <td>163</td>
     </tr>
     <tr>
-        <td>Rapid Spin</td>
+        <td>高速旋轉</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>Can cancel certain long-range attacks. Transform into Shell Fortress Stance with R</td>
+        <td>按前 + A</td>
+        <td>可消除某些遠距離攻擊。按 R 可轉換為龜殼要塞姿勢</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Water Spout</td>
+        <td>噴水</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward + A</td>
-        <td>Pierces counter attack. Power increases with high HP or in 同步爆發</td>
+        <td>按後 + A</td>
+        <td>可貫穿反擊攻擊。HP 較高或同步爆發時威力提升</td>
         <td>160</td>
     </tr>
     <tr>
-        <td>Withdraw</td>
-        <td>反擊</td>
+        <td>龜殼要塞</td>
+        <td>無傷害</td>
         <td>全階段</td>
-        <td>Charge then release A</td>
-        <td>Increases defense. Transitions into Shell Fortress Stance</td>
+        <td>按 R</td>
+        <td>進入防禦姿勢。可用方向鍵移動</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Bubble</td>
+        <td>龜殼迴轉</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>無特殊效果</td>
-        <td>36</td>
+        <td>龜殼要塞時按 Y</td>
+        <td>可用方向鍵改變軌跡</td>
+        <td>80</td>
     </tr>
     <tr>
-        <td>Bubble: Charge</td>
+        <td>龜殼衝擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair Hold A</td>
-        <td>無特殊效果</td>
-        <td>36</td>
+        <td>龜殼要塞時按 X</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>120</td>
     </tr>
     <tr>
         <td>水砲</td>
         <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + A</td>
-        <td>無特殊效果</td>
-        <td>81</td>
+        <td>全階段</td>
+        <td>龜殼要塞時按 A</td>
+        <td>可用方向鍵改變軌跡</td>
+        <td>100</td>
     </tr>
     <tr>
-        <td>Hydro Pump: Charge</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Hold A</td>
-        <td>Pierces counter attack.</td>
-        <td>153</td>
-    </tr>
-    <tr>
-        <td>Water Pulse</td>
-        <td>抓取</td>
-        <td>對戰階段</td>
-        <td>Down + A</td>
-        <td>Acts as counter attack after activation if you have positive status or 同步爆發</td>
-        <td>60</td>
-    </tr>
-    <tr>
-        <td>Water Gun ~ Aura Sphere: Upward</td>
+        <td>水流尾</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A, Backward + A</td>
-        <td>Change trajectory by pressing D-Pad left or right</td>
-        <td>88</td>
+        <td>龜殼要塞時按 B</td>
+        <td>可用方向鍵改變軌跡</td>
+        <td>90</td>
     </tr>
-</table><h2>標準招式</h2>
+</table>
+
+<h2>標準招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -264,232 +252,98 @@ a:hover {
         <th>按鈕組合</th>
         <th>備註</th>
         <th>傷害值</th>
+    </tr>
+    <tr>
+        <td>弱攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 Y</td>
+        <td>無特殊效果</td>
+        <td>20</td>
+    </tr>
+    <tr>
+        <td>弱攻擊～弱攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 Y，Y</td>
+        <td>無特殊效果</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>弱攻擊～強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 Y，X</td>
+        <td>無特殊效果</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 X</td>
+        <td>無特殊效果</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>跳躍弱攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>跳躍時按 Y</td>
+        <td>無特殊效果</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>跳躍強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>跳躍時按 X</td>
+        <td>無特殊效果</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>衝刺弱攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>衝刺時按 Y</td>
+        <td>無特殊效果</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>衝刺強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>衝刺時按 X</td>
+        <td>無特殊效果</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>反擊攻擊</td>
+        <td>反擊</td>
+        <td>全階段</td>
+        <td>按 R</td>
+        <td>可反制對手的攻擊</td>
+        <td>80</td>
     </tr>
     <tr>
         <td>抓取攻擊</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Y + B</td>
-        <td>可破防</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>反擊</td>
-        <td>反擊</td>
-        <td>全階段</td>
-        <td>X + A</td>
-        <td>Cancelled with D-Pad + R</td>
-        <td>92</td>
-    </tr>
-    <tr>
-        <td>蓄力反擊</td>
-        <td>反擊</td>
-        <td>全階段</td>
-        <td>Hold X + A</td>
-        <td>Pierces counter attack</td>
-        <td>119</td>
-    </tr>
-    <tr>
-        <td>寶可連擊1</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Y, Y</td>
-        <td>無特殊效果</td>
-        <td>96</td>
-    </tr>
-    <tr>
-        <td>遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Y</td>
-        <td>Cancelled with a Pokémon move. Transitions into Shell Stance with R or D-Pad + R. 長按 to change properties</td>
-        <td>36</td>
-    </tr>
-    <tr>
-        <td>側方遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Side + Y</td>
-        <td>Cancelled with a Pokémon move. Transitions into Shell Stance with R or D-Pad + R. 長按 to change properties</td>
-        <td>54</td>
-    </tr>
-    <tr>
-        <td>連接側方遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Side + Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>94</td>
-    </tr>
-    <tr>
-        <td>前方遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Forward + Y</td>
-        <td>切換階段</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>後方遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Backward + Y</td>
-        <td>長按 to change properties. 可阻止對手</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>跳躍遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Midair Y</td>
-        <td>長按 to change properties.</td>
-        <td>20</td>
-    </tr>
-    <tr>
-        <td>追蹤攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>X, X, X</td>
-        <td>Cancelled with R or B</td>
-        <td>120</td>
-    </tr>
-    <tr>
-        <td>蓄力追蹤攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>X, X, Hold X</td>
-        <td>貫穿反擊. Guard Break</td>
-        <td>150</td>
-    </tr>
-    <tr>
-        <td>跳躍攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Midair X</td>
-        <td>切換階段</td>
-        <td>100</td>
-    </tr>
-    <tr>
-        <td>Jumping Attack ~ Shell Fortress Stance</td>
-        <td>反擊</td>
-        <td>場地階段</td>
-        <td>Midair X, R</td>
-        <td>Transitions into Shell Fortress Stance</td>
-        <td>100</td>
-    </tr>
-    <tr>
-        <td>寶可連擊2</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>118</td>
-    </tr>
-    <tr>
-        <td>弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y</td>
-        <td>Cancelled with a Pokémon move. Transition into Shell Fortress Stance with R or D-Pad + R</td>
-        <td>94</td>
-    </tr>
-    <tr>
-        <td>前方弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + Y</td>
-        <td>無特殊效果</td>
+        <td>按 A</td>
+        <td>可抓住對手進行攻擊</td>
         <td>70</td>
     </tr>
     <tr>
-        <td>後方弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Backward + Y</td>
+        <td>跳躍抓取</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>跳躍時按 A</td>
         <td>無特殊效果</td>
-        <td>50</td>
-    </tr>
-    <tr>
-        <td>寶可連擊3</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Y, Y</td>
-        <td>無特殊效果</td>
-        <td>117</td>
-    </tr>
-    <tr>
-        <td>高姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Y</td>
-        <td>Cancelled with a Pokémon move. Transition into Shell Fortress Stance with R or D-Pad + R. 對空中對手有效</td>
-        <td>63</td>
-    </tr>
-    <tr>
-        <td>低姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>無特殊效果</td>
-        <td>50</td>
-    </tr>
-    <tr>
-        <td>空中弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>Change trajectory by pressing D-Pad forward and backward</td>
-        <td>40</td>
-    </tr>
-    <tr>
-        <td>Poké Combo 4</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X, X</td>
-        <td>無特殊效果</td>
-        <td>160</td>
-    </tr>
-    <tr>
-        <td>強力攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X</td>
-        <td>Cancelled with a Pokémon move. Transition into Shell Fortress Stance with R or D-Pad + R</td>
         <td>80</td>
     </tr>
-    <tr>
-        <td>前方強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + X</td>
-        <td>無特殊效果</td>
-        <td>100</td>
-    </tr>
-    <tr>
-        <td>高姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + X, X</td>
-        <td>Effective against grabs</td>
-        <td>120</td>
-    </tr>
-    <tr>
-        <td>低姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + X</td>
-        <td>擊倒對手</td>
-        <td>104</td>
-    </tr>
-    <tr>
-        <td>空中強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair X</td>
-        <td>無特殊效果</td>
-        <td>120</td>
-    </tr>
-</table><h2>僅限同步爆發時</h2>
+</table>
+
+<h2>僅限同步爆發時</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -500,52 +354,20 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Shell Fortress Stance</td>
+        <td>同步爆發衝刺</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Forward +A, R</td>
-        <td>Cancelled with R</td>
+        <td>同步爆發時按 R + A</td>
+        <td>快速接近對手</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Shell Fortress Stance ~ Dash Step</td>
+        <td>同步爆發取消</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>D-Pad + R during Shell Fortress Stance</td>
-        <td>無特殊效果</td>
+        <td>同步爆發時按 L + R + A</td>
+        <td>取消同步爆發狀態</td>
         <td>0</td>
-    </tr>
-    <tr>
-        <td>Shell Fortress Stance ~ Jump</td>
-        <td>無傷害</td>
-        <td>全階段</td>
-        <td>B or D-Pad + B</td>
-        <td>Transition into midair attacks</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>Shell Fortress Stance ~ Weak Attack Follow-up</td>
-        <td>一般</td>
-        <td>全階段</td>
-        <td>Y during Shell Fortress Stance</td>
-        <td>無特殊效果</td>
-        <td>40</td>
-    </tr>
-    <tr>
-        <td>Shell Fortress Stance ~ Strong Attack Follow-up</td>
-        <td>一般</td>
-        <td>全階段</td>
-        <td>X during Shell Fortress Stance</td>
-        <td>無特殊效果</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>Shell Fortress Stance ~ Rapid Spin</td>
-        <td>反擊</td>
-        <td>全階段</td>
-        <td>A during Shell Fortress Stance</td>
-        <td>Cancels long range attacks. Transition into Shell Fortress Stance with R</td>
-        <td>90</td>
     </tr>
 </table>
     
