--- a/帝王拿波.html
+++ b/帝王拿波.html
@@ -110,11 +110,11 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Deep Blue Monarch</td>
-        <td>抓取</td>
+        <td>深藍帝王</td>
+        <td>爆發</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>Can be used from Aqua Jet, Defog and Drill Peck</td>
+        <td>同步爆發時按 L + R</td>
+        <td>可從水流噴射、清除濃霧和啄鑽中使用</td>
         <td>220</td>
     </tr>
 </table><h2>寶可夢招式</h2>
@@ -131,55 +131,55 @@ a:hover {
         <td>水流噴射</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A</td>
-        <td>When lands, can be cancelled with a follow up move. Properties change depending on when it lands</td>
+        <td>按 A</td>
+        <td>落地時可取消並接續其他招式。效果會依落地時機而改變</td>
         <td>70</td>
     </tr>
     <tr>
         <td>冰凍光束</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>Change trajectory by pressing D-Pad diagonally forward</td>
+        <td>按前 + A</td>
+        <td>按斜前方向鍵可改變軌跡</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Ice Beam ~ Slide</td>
+        <td>冰凍光束～滑行</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + Hold A</td>
-        <td>Change trajectory by pressing D-Pad diagonally forward</td>
+        <td>按前 + 長按 A</td>
+        <td>按斜前方向鍵可改變軌跡</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Defog</td>
+        <td>清除濃霧</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward A</td>
-        <td>Cancels long range attacks. Cancelled by a follow up Pokémon move</td>
+        <td>按後 + A</td>
+        <td>可消除遠距離攻擊。可用寶可夢招式取消</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Steel Wing</td>
+        <td>鋼翼</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>Pierces counter attack</td>
+        <td>空中按 A</td>
+        <td>可貫穿反擊攻擊</td>
         <td>90</td>
     </tr>
     <tr>
-        <td>Drill Peck</td>
+        <td>啄鑽</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + A</td>
-        <td>Can be cancelled with a follow-up Pokémon move</td>
+        <td>按上 + A</td>
+        <td>可用寶可夢招式取消</td>
         <td>50</td>
     </tr>
     <tr>
-        <td>Cut</td>
+        <td>居合斬</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Y during Aqua Jet</td>
+        <td>水流噴射時按 Y</td>
         <td>無特殊效果</td>
         <td>112</td>
     </tr>
@@ -187,24 +187,24 @@ a:hover {
         <td>攀瀑</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>X during Aqua Jet</td>
+        <td>水流噴射時按 X</td>
         <td>無特殊效果</td>
         <td>144</td>
     </tr>
     <tr>
-        <td>Rock Smash</td>
+        <td>碎岩</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>A during Aqua Jet</td>
-        <td>Pierces counter attack. Drops opponent's Defense</td>
+        <td>水流噴射時按 A</td>
+        <td>可貫穿反擊攻擊。降低對手防禦力</td>
         <td>150</td>
     </tr>
     <tr>
-        <td>Surf</td>
+        <td>衝浪</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>B during Aqua Jet</td>
-        <td>Cancelled with R. Transitions into midair attacks</td>
+        <td>水流噴射時按 B</td>
+        <td>可取消並轉換為空中攻擊</td>
         <td>170</td>
     </tr>
 </table><h2>標準招式</h2>
@@ -221,275 +221,133 @@ a:hover {
         <td>抓取攻擊</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Y + B</td>
+        <td>按 Y + B</td>
         <td>無特殊效果</td>
-        <td>60</td>
+        <td>100</td>
     </tr>
     <tr>
         <td>反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>可用方向鍵+R取消</td>
-        <td>60</td>
+        <td>按 X + A</td>
+        <td>可用方向鍵 + R 取消</td>
+        <td>73</td>
     </tr>
     <tr>
         <td>蓄力反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Hold X + A</td>
-        <td>Pierces counter attack.</td>
+        <td>長按 X + A</td>
+        <td>貫穿反擊並破防</td>
         <td>90</td>
     </tr>
     <tr>
-        <td>寶可連擊1</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Y, Y</td>
-        <td>無特殊效果</td>
-        <td>102</td>
+        <td>滑翔</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>空中按 R</td>
+        <td>使角色跳到空中。長按 R 可加快下降速度</td>
+        <td>0</td>
     </tr>
     <tr>
         <td>遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y</td>
-        <td>Cancelled with a Pokémon move.</td>
-        <td>30</td>
+        <td>按 Y</td>
+        <td>無特殊效果</td>
+        <td>59</td>
+    </tr>
+    <tr>
+        <td>遠距離攻擊：蓄力</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>長按 Y</td>
+        <td>無特殊效果</td>
+        <td>64</td>
+    </tr>
+    <tr>
+        <td>連接遠距離攻擊</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按 Y，Y</td>
+        <td>無特殊效果</td>
+        <td>79</td>
     </tr>
     <tr>
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
+        <td>側身按 Y</td>
         <td>無特殊效果</td>
-        <td>20</td>
-    </tr>
-    <tr>
-        <td>連接側方遠距離攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Side + Y, Y</td>
-        <td>無特殊效果</td>
-        <td>52</td>
+        <td>70</td>
     </tr>
     <tr>
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
+        <td>按前 + Y</td>
         <td>切換階段</td>
-        <td>40</td>
+        <td>80</td>
     </tr>
     <tr>
         <td>後方遠距離攻擊</td>
-        <td>一般</td>
+        <td>反擊</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
+        <td>按後 + Y</td>
         <td>對空中對手有效</td>
-        <td>36</td>
+        <td>91</td>
     </tr>
     <tr>
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
-        <td>Move with D-Pad</td>
-        <td>54</td>
+        <td>空中按 Y</td>
+        <td>可用方向鍵改變軌跡</td>
+        <td>49</td>
+    </tr>
+    <tr>
+        <td>跳躍遠距離攻擊：蓄力</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>空中長按 Y</td>
+        <td>可用方向鍵改變軌跡</td>
+        <td>70</td>
     </tr>
     <tr>
         <td>追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X, X</td>
-        <td>可用R取消 or B</td>
-        <td>96</td>
+        <td>按 X，X</td>
+        <td>可用 R 或 B 取消</td>
+        <td>126</td>
     </tr>
     <tr>
         <td>蓄力追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X, Hold X</td>
-        <td>貫穿反擊 and breaks the guard</td>
-        <td>132</td>
-    </tr>
-    <tr>
-        <td>Backward Attack</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Backward + X</td>
-        <td>無特殊效果</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>Backward Attack ~ Slide</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Backward + Hold X</td>
-        <td>Change direction of slide with D-Pad</td>
-        <td>30</td>
+        <td>按 X，長按 X</td>
+        <td>貫穿反擊並破防</td>
+        <td>232</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X</td>
-        <td>切換階段</td>
-        <td>100</td>
+        <td>空中按 X</td>
+        <td>按後 + X 可立即攻擊。可用 R 滑翔</td>
+        <td>90</td>
     </tr>
     <tr>
-        <td>Jumping Attack ~ Slide</td>
+        <td>跳躍攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Hold X</td>
-        <td>Change direction of slide with D-Pad</td>
-        <td>100</td>
+        <td>空中長按 X</td>
+        <td>貫穿反擊。可用 R 滑翔</td>
+        <td>120</td>
     </tr>
-    <tr>
-        <td>寶可連擊2</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>108</td>
-    </tr>
-    <tr>
-        <td>弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y</td>
-        <td>Cancelled with a Pokémon move.</td>
-        <td>60</td>
-    </tr>
-    <tr>
-        <td>寶可連擊3</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>139</td>
-    </tr>
-    <tr>
-        <td>前方弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + Y, Y</td>
-        <td>Cancelled with a Pokémon move.</td>
-        <td>104</td>
-    </tr>
-    <tr>
-        <td>高姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Y</td>
-        <td>對空中對手有效</td>
-        <td>36</td>
-    </tr>
-    <tr>
-        <td>Poké Combo 4</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y, Y</td>
-        <td>無特殊效果</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>低姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>Cancelled with a Pokémon move.</td>
-        <td>30</td>
-    </tr>
-    <tr>
-        <td>空中弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>Move with D-Pad</td>
-        <td>38</td>
-    </tr>
-    <tr>
-        <td>強力攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X</td>
-        <td>無特殊效果</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>後方強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Backward + X</td>
-        <td>無特殊效果</td>
-        <td>81</td>
-    </tr>
-    <tr>
-        <td>高姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>Effective against grab attacks</td>
-        <td>80</td>
-    </tr>
-    <tr>
-        <td>低姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + X</td>
-        <td>Change distance travelled by pressing D-Pad diagonally backward</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>Low Stance Strong Attack ~ Slide</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Hold X</td>
-        <td>Change direction of Slide by pressing D-Pad forward and backward</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>空中強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair X</td>
-        <td>無特殊效果</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>Midair Strong Attack ~ Slide</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Hold X</td>
-        <td>Change direction of Slide by pressing D-Pad forward and backward</td>
-        <td>70</td>
-    </tr>
-    <tr>
-        <td>Weak Attack ~ Strong Attack Follow-Up</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, X</td>
-        <td>無特殊效果</td>
-        <td>85</td>
-    </tr>
-    <tr>
-        <td>Weak Attack ~ Strong Attack Follow-Up ~ Slide</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Hold X,</td>
-        <td>Can change direction of slide with D-Pad</td>
-        <td>52</td>
-    </tr>
-    <tr>
-        <td>Link up with Side Ranged Attacks ~ Slide</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Y, Hold X</td>
-        <td>Can change direction of slide with D-Pad</td>
-        <td>52</td>
-    </tr>
-</table><h2>僅限同步爆發時</h2>
+</table>
+
+<h2>僅限同步爆發時</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -500,36 +358,124 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Slide</td>
+        <td>寶可連擊1</td>
         <td>一般</td>
-        <td>全階段</td>
-        <td>Forward + Hold Button</td>
+        <td>對戰階段</td>
+        <td>按 Y，Y，Y</td>
         <td>無特殊效果</td>
-        <td>0</td>
+        <td>154</td>
     </tr>
     <tr>
-        <td>Slide ~ Attack</td>
+        <td>弱攻擊</td>
         <td>一般</td>
-        <td>全階段</td>
-        <td>Y or X during Slide</td>
-        <td>Transitions into attacks</td>
+        <td>對戰階段</td>
+        <td>按 Y，Y</td>
+        <td>可用跳躍或寶可夢招式取消</td>
+        <td>84</td>
+    </tr>
+    <tr>
+        <td>前方弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按前 + Y</td>
+        <td>擊倒對手</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>高姿勢弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按上 + Y</td>
+        <td>可轉換為空中攻擊</td>
+        <td>18</td>
+    </tr>
+    <tr>
+        <td>低姿勢弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按下 + Y</td>
+        <td>無特殊效果</td>
         <td>40</td>
     </tr>
     <tr>
-        <td>Slide ~ Jump</td>
+        <td>寶可連擊2</td>
         <td>一般</td>
-        <td>全階段</td>
-        <td>B during Slide</td>
-        <td>Transitions into midair attacks</td>
-        <td>0</td>
+        <td>對戰階段</td>
+        <td>空中按 Y，Y</td>
+        <td>無特殊效果</td>
+        <td>140</td>
     </tr>
     <tr>
-        <td>Hydro Cannon: Rush</td>
+        <td>空中弱攻擊</td>
         <td>一般</td>
-        <td>全階段</td>
-        <td>A during Slide</td>
-        <td>Simultaneously attack forward and backward</td>
-        <td>160</td>
+        <td>對戰階段</td>
+        <td>空中按 Y</td>
+        <td>可用寶可夢招式取消</td>
+        <td>36</td>
+    </tr>
+    <tr>
+        <td>空中前方弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中按前 + Y，Y</td>
+        <td>無特殊效果</td>
+        <td>97</td>
+    </tr>
+    <tr>
+        <td>強力攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按 X</td>
+        <td>無特殊效果</td>
+        <td>130</td>
+    </tr>
+    <tr>
+        <td>前方強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按前 + X，X</td>
+        <td>無特殊效果</td>
+        <td>164</td>
+    </tr>
+    <tr>
+        <td>高姿勢強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按上 + X</td>
+        <td>對抓取攻擊有效</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>寶可連擊3</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按下 + X，X</td>
+        <td>無特殊效果</td>
+        <td>111</td>
+    </tr>
+    <tr>
+        <td>低姿勢強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>按下 + X</td>
+        <td>可用跳躍或寶可夢招式取消</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>空中強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中按 X</td>
+        <td>按後 + X 可立即攻擊。可用 R 滑翔</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>空中強攻擊：蓄力</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中長按 X</td>
+        <td>貫穿反擊攻擊，可用 R 切換至滑翔</td>
+        <td>120</td>
     </tr>
 </table>
     
